pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/case-lambda1.rkt
#;
(exn-pred 2)
#lang typed/racket
(: f (case->
  (Symbol Symbol *  -> Integer)
  (Symbol * -> Symbol)))
(define f (case-lambda
            ((x . y) 4)
             (w 'x)
        ))

((ann f (Symbol * -> Symbol)) 'x)
